<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/cat_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_image_icon"/>

    <TextView
        android:id="@+id/cat_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_toEndOf="@id/cat_image"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cat_type"/>

    <TextView
        android:id="@+id/cat_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cat_type"
        android:layout_toEndOf="@id/cat_image"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/color"/>

    <TextView
        android:id="@+id/cat_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cat_type"
        android:layout_toEndOf="@id/cat_color"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/age"/>

    <TextView
        android:id="@+id/cat_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cat_color"
        android:layout_toEndOf="@id/cat_image"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@android:color/black"
        android:layout_below="@id/cat_price"/>

</RelativeLayout>