<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountDetailsActivity"
    android:background="@color/bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_profile"
        />

    <ImageView
        android:id="@+id/home_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_home_24"/>


    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_profile"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@id/profile_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Mohammad k. Hasan"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_toEndOf="@id/profile_icon"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_name"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_layout"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_phone_24"/>
        <TextView
            android:id="@+id/phone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@id/phone_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="(650)555-1234"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_text_view"
            android:layout_toEndOf="@id/phone_icon"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_mobile"/>


    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@id/phone_layout"
        android:background="@android:color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="30dp"/>


    <RelativeLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_email_24"/>
        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@id/email_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Al-Ahsa@gmail.com"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text_view"
            android:layout_toEndOf="@id/email_icon"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_personal"/>


    </RelativeLayout>


</RelativeLayout>